WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79108
Web Inspector: [crash] upon style modification after navigation
https://bugs.webkit.org/show_bug.cgi?id=79108
Summary
Web Inspector: [crash] upon style modification after navigation
Pavel Feldman
Reported
2012-02-21 07:51:53 PST
Patch to follow.
Attachments
Patch
(1.97 KB, patch)
2012-02-21 07:53 PST
,
Pavel Feldman
yurys
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2012-02-21 07:53:33 PST
Created
attachment 127972
[details]
Patch
Pavel Feldman
Comment 2
2012-02-21 07:56:44 PST
Committed
r108354
: <
http://trac.webkit.org/changeset/108354
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug