Web Inspector: [crash] upon style modification after navigation https://bugs.webkit.org/show_bug.cgi?id=79108

Reviewed by Yury Semikhatsky.

* inspector/InspectorHistory.cpp:
(WebCore::InspectorHistory::undo):
(WebCore::InspectorHistory::redo):
(WebCore::InspectorHistory::reset):

Canonical link: https://commits.webkit.org/96161@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108354 268f45cc-cd09-0410-ab3c-d52691b4dbfc